2005-07-19  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Fix the display of
	one-line logs.

	* monitor.c (mon_update_display): Escape the log lines before
	adding them to the tree.

2005-06-20  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (init_calendar_data):
	* logview.c:
	* userprefs.c: (prefs_create_defaults): Fix functions return
	values. Patch from Stanislav Brabec (bug #308382). Add a few more
	default logs.

2005-06-16  Vincent Noel  <vnoel@cox.net>

	* calendar.c:
	* desc_db.c:
	* logview.c:
	* userprefs.c: Fix implicit includes.

2005-06-14  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: (ReadNewLines):
	* logview.c: (die):
	* zoom.c: (repaint_zoom): Make sure the correct return value is specified.

2005-06-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: (prefs_create_defaults): Thinko.
	(prefs_create_defaults): Use gnome-vfs instead of lstat.

2005-06-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: (prefs_create_defaults):
	Don't crash on first run (please)
	Should fix bug #307642.

2005-06-09  Vincent Noel  <vnoel@cox.net>

	* logrtns.c:
	* logview-findbar.c: Apply some warning fixes from Kjartan Maraas
	in bug #170841.

2005-05-27  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (logview_update_version_bar):
	* log_repaint.h:
	* logrtns.c: (OpenLogFile), (CloseLog):
	* logrtns.h:
	* logview.c: (logview_select_log), (logview_add_log_from_name),
	(logview_add_logs_from_names), (logview_version_selector_changed),
	(CreateMainWin), (FileSelectResponse):
	* logview.h:
	* userprefs.c: (prefs_load):
	When a log has archives (messages.1, messages.2, etc), show a
	drop-down menu to select the archive to display.

2005-05-26  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Prevent crash.

	* logrtns.c (ParseLine): Simplify.

	* logview.c (CreateMainWin): Remove the signal for row activation.
	* log_repaint.c: (handle_row_collapse_cb),
	(handle_row_expansion_cb), (DrawLogLines): Free the expanded paths